@@ -1,4 +1,4 @@
-C RCS $Id: gnuplot.doc,v 1.387.2.23 2008/02/29 17:53:38 sfeam Exp $
+C RCS $Id: gnuplot.doc,v 1.387.2.24 2008/03/12 03:09:09 sfeam Exp $
 C
 C Copyright (C) 1986 - 1993, 1998, 1999, 2000, 2001, 2004   Thomas Williams, Colin Kelley et al.
 C
@@ -6901,16 +6901,20 @@ C ... and restart the table:
  margin` shows the current settings.
 
  Syntax:
-       set bmargin {<margin>}
-       set lmargin {<margin>}
-       set rmargin {<margin>}
-       set tmargin {<margin>}
+       set bmargin {{screen} <margin>}
+       set lmargin {{screen} <margin>}
+       set rmargin {{screen} <margin>}
+       set tmargin {{screen} <margin>}
        show margin
 
- The units of <margin> are character heights or widths, as appropriate.  A
- positive value defines the absolute size of the margin.  A negative value
+ The default units of <margin> are character heights or widths, as appropriate.
+ A positive value defines the absolute size of the margin.  A negative value
  (or none) causes `gnuplot` to revert to the computed value.  For 3D plots,
- only the left margin setting has any effect so far.
+ only the left margin can be set using character units.
+
+ The keyword `screen` indicates that the margin is specified as a fraction of
+ the full drawing area. This can be used to precisely line up the corners of
+ individual 2D and 3D graphs in a multiplot.
 
  Normally the margins of a plot are automatically calculated based on tics,
  tic labels, axis labels, the plot title, the timestamp and the size of the
